[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Simon Austen", email = "hello@simonausten.me"},
]
dependencies = [
    "termcolor>=2.3.0",
    "langchain>=0.0.150",
    "openai>=0.27.6",
    "gradio>=3.27.0",
    "setuptools>=67.7.2",
    "pip>=23.1.2",
    "toml>=0.10.2",
    "black>=23.3.0",
    "streamlit-chat>=0.0.2.2",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "commitizen>=3.2.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_type = "semver"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]